--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1097,8 +1097,8 @@ com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Speichern
 
 #Wordings related to computer's storage tab of the file selection dialog.
 com.fathzer.soft.jclop.FileChooserPanel.title=Computer
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrem lokalen Arbeitsplatz zu speichern
-com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrem lokalen Arbeitsplatz zu lesen
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrer lokalen Festplatte zu speichern
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrer lokalen Festplatte zu lesen
 
 #Wordings related to data size units
 com.fathzer.soft.jclop.Generic.data.unit.bytes=Bytes
@@ -1148,48 +1148,48 @@ com.fathzer.soft.jclop.dropbox.Chooser.refresh.tooltip=Klicken Sie diesen Button
 #-------------------------------------------------------
 # Added or modified since last translation
 
-com.fathzer.soft.jclop.GenericWait.title=Merci de patienter ...
-com.fathzer.soft.jclop.Error.title=Une erreur est survenue
-com.fathzer.soft.jclop.Error.unableToSerializeAccount=Désolé, impossible de sauvegarder les données de connexion du compte. Celles-ci seront oubliées lorsque vous quitterez Yapbam
-com.fathzer.soft.jclop.Chooser.delete.message.title=Déconnexion du compte
-com.fathzer.soft.jclop.dropbox.Chooser.delete=Déconnecter
+com.fathzer.soft.jclop.GenericWait.title=Bitte warten ...
+com.fathzer.soft.jclop.Error.title=Ein Fehler ist aufgetreten
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Die Konto-Anmeldedaten konnten nicht gesichert werden. Die Einstellungen werden beim Beenden von Yapbam verloren gehen.
+com.fathzer.soft.jclop.Chooser.delete.message.title=Verbindung zum Konto trennen
+com.fathzer.soft.jclop.dropbox.Chooser.delete=Verbindung trennen
 
-com.fathzer.soft.jclop.Chooser.new.tooltip=Crée un nouveau compte
-com.fathzer.soft.jclop.dropbox.Chooser.delete.tooltip=Supprime les données locales sur compte sélectionné
-com.fathzer.soft.jclop.dropbox.Chooser.delete.message=<html>Êtes-vous certain de vouloir vous déconnecter de ce compte ?<br><br>Cette action supprimera de votre ordinateur toutes les informations sur ce compte Dropbox.<br>Le contenu du compte sur Dropbox restera inchangé.</html>
-com.fathzer.soft.jclop.dropbox.communication.unexpectedError=Une erreur innatendue est survenue lors de la communication avec Dropbox.
+com.fathzer.soft.jclop.Chooser.new.tooltip=Ein neues Konto erstellen
+com.fathzer.soft.jclop.dropbox.Chooser.delete.tooltip=L\u00f6scht die lokal vorhandenen Daten des Kontos
+com.fathzer.soft.jclop.dropbox.Chooser.delete.message=<html>M\u00f6chten Sie wirklich die Verbindung zu diesem Konto trennen?<br><br>Damit l\u00f6schen Sie alle lokal vorhandenen Daten zu diesem Konto.<br>Die in Ihrer Dropbox gespeicherten Daten bleiben unver\u00e4ndert erhalten.</html>
+com.fathzer.soft.jclop.dropbox.communication.unexpectedError=Bei der Verbindung mit Dropbox ist ein unerwarteter Fehler aufgetreten.
 
 #Improvement of the message indicating that a data file is corrupted
-MainMenu.Open.Error.DialogContent=<html>Désolé, impossible de lire le fichier {0}.<br>Si vous ne vous êtes pas trompé en choisissant le fichier, c''est qu''il est peut-être corrompu.<br><br>Dans ce cas, vous pouvez obtenir de l''aide par email.<br>Envoyez votre fichier de données ainsi que le message ci-dessous à l''adresse <b>support@yapbam.net</b>.<br><br>Vos données ne seront utilisées que pour tenter de les réparer (ou de réparer Yapbam, si le problème ne vient pas du fichier de données).<br>Nous ne pouvons donner aucune garantie de résultat, juste l''assurance que nous ferons de notre mieux.</html>
+MainMenu.Open.Error.DialogContent=<html>Die Datei {0} konnte leider nicht gelesen werden.<br>Wenn Sie sich bei der Dateiauswahl nicht geirrt haben, ist die Datei m\u00f6glicherweise besch\u00e4digt.<br><br>In diesem Fall k\u00f6nnen Sie Hilfe per E-Mail bekommen.<br>Schicken Sie Ihre Einstellungsdatei zusammen mit der angezeigten Meldung an <b>support@yapbam.net</b>.<br><br>Ihre Daten werden ausschlie\u00dflich f\u00fcr einen Reparaturversuch der Datei verwendet (oder zur Reparatur von Yapbam, wenn der Fehler nicht durch die Datei auftrat).<br>Wir k\u00f6nnen keine Erfolgsgarantie geben, nur dass wir unser Bestes versuchen.</html>
 #Message when trying to write data to a non writable file
-saveDialog.fileNotWritable=<html>Cette application ne peut écrire dans ce fichier.<br><br>Les causes courantes sont :<br>- Le fichier est ouvert dans une autre application.<br>- Le fichier est dans un dossier dans lequel vous n'êtes pas autorisé à écrire.<br>- Le fichier est protégé en écriture.</html>
-openDialog.fileNotReadable=<html>Cette application ne peut pas lire ce fichier.<br><br>Les causes courantes sont :<br>- Le fichier est ouvert dans une autre application.<br>- Le propriétaire de ce fichier ne vous a pas donné le droit de le lire.</html>
-openDialog.cacheNotReadable=<html>L''accès au fichier <b>{0}</b> est refusé à l''application, ce qui empêche la lecture des données.<br><br>Les causes courantes sont :<br>- Le fichier est ouvert dans une autre application.<br>- Le propriétaire de ce fichier ne vous a pas donné le droit de le lire.</html>
-MainFrame.LastNotReadable=<html>Impossible de lire le dernier fichier ouvert ({0}).<br><br>Les causes courantes sont :<br>- Le fichier est ouvert dans une autre application.<br>- Le propriétaire de ce fichier ne vous a pas donné le droit de le lire.</html>
+saveDialog.fileNotWritable=<html>Das Programm kann die Datei nicht speichern.<br><br>M\u00f6gliche Ursachen sind:<br>- Die Datei ist in einem anderen Programm ge\u00f6ffnet.<br>- Die Datei befindet sich in einem schreibgesch\u00fctzten Verzeichnis.<br>- Die Datei selbst ist schreibgesch\u00fctzt.</html>
+openDialog.fileNotReadable=<html>Das Programm kann die Datei nicht \u00f6ffnen.<br><br>M\u00f6gliche Ursachen sind:<br>- Die Datei ist in einem anderen Programm ge\u00f6ffnet.<br>- Der Eigent\u00fcmer der Datei hat kein Leserecht f\u00fcr Sie freigegeben.</html>
+openDialog.cacheNotReadable=<html>Der Zugriff auf die Datei <b>{0}</b> wurde verweigert, wodurch sie nicht ge\u00f6ffnet werden konnte.<br><br>M\u00f6gliche Ursachen sind:<br>- Die Datei ist in einem anderen Programm ge\u00f6ffnet.<br>- Der Eigent\u00fcmer der Datei hat kein Leserecht f\u00fcr Sie freigegeben.</html>
+MainFrame.LastNotReadable=<html>Die zuletzt ge\u00f6ffnete Datei konnte nicht gelesen werden ({0}).<br><br>M\u00f6gliche Ursachen sind:<br>- Die Datei ist in einem anderen Programm ge\u00f6ffnet.<br>- Der Eigent\u00fcmer der Datei hat kein Leserecht f\u00fcr Sie freigegeben.</html>
 
 #A new field is created to attach a note to an account
-AccountDialog.notes=Notes:
-AccountDialog.notes.tooltip=Sie können Noten in diesem Bereich (Name der Kontaktperson, Telefon, etc ...)
+AccountDialog.notes=Bemerkungen:
+AccountDialog.notes.tooltip=Sie k\u00f6nnen Bemerkungen in diesem Bereich eingeben (Name der Kontaktperson, Telefon, etc ...)
 
 #A new button in the statement tab to rename the selected statement
 StatementDialog.button.name=Umbenennen
-StatementDialog.button.tooltip=<html>Ändern Sie den Namen des ausgewählten Berichts.<br>Beachten Sie, dass der Name keine Aufzeichnungen Einfluss auf die Reihenfolge im Menü.</html>
-StatementDialog.title=Ausgabebezeichnung
-StatementDialog.tooltip=Geben Sie die ID der Anweisung hier
-StatementDialog.err=Deaktiviert, da die ID der Anweisung ist leer
-StatementDialog.existing.message=<html>Diese Aussage ist bereits vorhanden.<br>Klicken Sie auf OK, um die Datensätze {0} verschmelzen und {1}.</html>
-StatementDialog.existing.title=Identifizierte bestehenden
+StatementDialog.button.tooltip=<html>\u00c4ndern Sie den Namen des ausgew\u00e4hlten Empf\u00e4ngers/Auftraggebers.<br>Beachten Sie, dass der Name keinen Einfluss auf die Darstellungsreihenfolge hat.</html>
+StatementDialog.title=Bezeichnung \u00e4ndern
+StatementDialog.tooltip=Geben Sie die ID ein
+StatementDialog.err=Deaktiviert, da die ID leer ist
+StatementDialog.existing.message=<html>Dieser Eintrag ist bereits vorhanden.<br>Klicken Sie auf OK, um die Datens\u00e4tze {0} und {1} zusammenzuf\u00fchren.</html>
+StatementDialog.existing.title=Bestehende ID
 
 #Theme preference panel has been completed by a font size panel, so it has now two sub-panels
 #First is the old theme panel, second is the font size panel. The global panel's title is now less precise
-PreferencesDialog.Theme.title=Gemeinsam
-PreferencesDialog.Theme.fontSize=Schriftgröße
-PreferencesDialog.Theme.textSample=Dies ist ein Text beispielsweise
+PreferencesDialog.Theme.title=Allgemein
+PreferencesDialog.Theme.fontSize=Schriftgr\u00f6\u00dfe
+PreferencesDialog.Theme.textSample=Dies ist ein Beispieltext
 
 #As the font size setting is only available with the Nimbus theme, the control is disabled when other theme is selected
-PreferencesDialog.Theme.fontSize.tooltip.disabled=Dieser Regler ist deaktiviert, da die Schriftgröße Einstellung ist nur mit dem Nimbus Theme
-PreferencesDialog.Theme.fontSize.tooltip.enabled=Bewegen Sie den Schieberegler, um die Schriftgröße zu ändern
+PreferencesDialog.Theme.fontSize.tooltip.disabled=Dieser Regler ist deaktiviert, da die Schriftgr\u00f6\u00dfen-Einstellung nur mit dem Nimbus Theme verf\u00fcgbar ist
+PreferencesDialog.Theme.fontSize.tooltip.enabled=Bewegen Sie den Schieberegler, um die Schriftgr\u00f6\u00dfe zu \u00e4ndern
 
 #Adds a menu file in the file menu to display the latest opened files  
-RecentFiles.title=Neueste Dateien
-RecentFiles.tooltip=Wählen Sie eine Datei in das Untermenü zu öffnen
+RecentFiles.title=Zuletzt verwendete Dateien
+RecentFiles.tooltip=W\u00e4hlen Sie eine Datei in das Untermen\u00fc zu \u00f6ffnen
