--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1172,7 +1172,7 @@ AccountDialog.notes.tooltip=Vous pouvez entrer vos notes dans cette zone (RIB, n
 
 #A new button in the statement tab to rename the selected statement
 StatementDialog.button.name=Renommer
-StatementDialog.button.tooltip=<html>Change le nom du relevé sélectionné.<br>Notez que le nom des relevés n'a aucun influence sur leur ordre dans le menu.</html>
+StatementDialog.button.tooltip=<html>Change le nom du relevé sélectionné.<br>Notez que les noms des relevés n'ont aucune influence sur leur ordre dans le menu.</html>
 StatementDialog.title=Edition de relevé
 StatementDialog.tooltip=Entrez ici l'identifiant du rélevé
 StatementDialog.err=Désactivé car l'identifiant du relevé est vide
