--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -6,6 +6,12 @@ known
 improvement
 	Yapbam peut être connecté à un compte Dropbox de manière à partager vos données entre plusieurs ordinateurs via Internet, et bénéficier des fonctions de sauvegarde de Dropbox.
 
+version	0.14.4 (24/03/2013)
+fix
+	Le menu "Fichier/Fichiers récents" était systématiquement inactif au lancement de Yapbam quand aucun fichier n'était ouvert.
+improvement
+	Dans l'onglet "Opérations", la colonne "S/O", qui permet d'afficher ou de masquer les sous-opération, a maintenant une taille fixe et est systématiquement à gauche.
+
 version	0.14.3 (24/02/2013)
 improvement
 	Ajoute un bouton pour renommer les relevés de comptes dans l'onglet "Relevés de compte".
