--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1155,33 +1155,33 @@ com.fathzer.soft.jclop.dropbox.Chooser.refresh.tooltip=Clique neste botão para e
 #-------------------------------------------------------
 # Added or modified since last translation
 
-com.fathzer.soft.jclop.GenericWait.title=Please wait ...
-com.fathzer.soft.jclop.Error.title=An error occurred
-com.fathzer.soft.jclop.Error.unableToSerializeAccount=Sorry, the login data can't be saved. It will be forget when you will close Yapbam
-com.fathzer.soft.jclop.Chooser.delete.message.title=Disconnect from account
-com.fathzer.soft.jclop.dropbox.Chooser.delete=Disconnect
+com.fathzer.soft.jclop.GenericWait.title=Por favor, espere ...
+com.fathzer.soft.jclop.Error.title=Um erro ocorreu
+com.fathzer.soft.jclop.Error.unableToSerializeAccount=Desculpa, os dados do login não pode ser salvo. O mesmo será esquecido quando você fechar o Yapbam
+com.fathzer.soft.jclop.Chooser.delete.message.title=Desconecta da conta
+com.fathzer.soft.jclop.dropbox.Chooser.delete=Desconecta
 
-com.fathzer.soft.jclop.Chooser.new.tooltip=Creates a new account
-com.fathzer.soft.jclop.dropbox.Chooser.delete.tooltip=Deletes the local data about the selected account
-com.fathzer.soft.jclop.dropbox.Chooser.delete.message=<html>Are you sure you want to disconnect from this account ?<br><br>It will delete all data about this account that was stored on your computer.<br>The data stored in Dropbox will remain unmodified.</html>
-com.fathzer.soft.jclop.dropbox.communication.unexpectedError=An unexpected error occurred while communication with Dropbox
+com.fathzer.soft.jclop.Chooser.new.tooltip=Cria uma nova conta
+com.fathzer.soft.jclop.dropbox.Chooser.delete.tooltip=Deleta os dados locais da conta selecionada
+com.fathzer.soft.jclop.dropbox.Chooser.delete.message=<html> Você tem certeza que quer desconectar essa conta ?<br><br>Este vai deletar os dados dessa conta que está armazenados no seu computador.<br>Os dados armazenaos no Dropbox não serão modificados.</html>
+com.fathzer.soft.jclop.dropbox.communication.unexpectedError= Um erro inesperado ocorreu enquanto comunicando com o Dropbox
 
-PeriodicalTransactionDialog.error.endDate=A data final é inválido
+PeriodicalTransactionDialog.error.endDate=A data final é inválida
 
 #Improvement of the message indicating that a data file is corrupted
-MainMenu.Open.Error.DialogContent=<html>Sorry, file {0} could not be read.<br>If you did not make a mistake while choosing the file, it is maybe corrupted.<br><br>Then, help can be obtained via email.<br>Send your data file and the message below to <b>support@yapbam.net</b>.<br><br>Your data will only be used in order to fix the file (or Yapbam, if the problem is not with your file).<br>We cannot guarantee that all your data will be recovered.</html>
+MainMenu.Open.Error.DialogContent=<html>Desculpa, arquivo {0} não pode ser lido.<br>Se você não ocasionou nenhum erro, então o arquivo pode estar corrupto.<br><br>Dessa forma, ajuda pode ser obtida através do email.<br> Envie o seu arquivo e a mensagem abaixo<b>suporte@yapbam.net</b>.<br><br>Os dados do arquivo serão usados somente para arrumar o arquivo (ou Yapbam, se o problema não for o seu arquivo).<br>Não garantimos que todos os dados do arquivo serão recuperados.</html>
 #Message when trying to write data to a non writable file
-saveDialog.fileNotWritable=<html>Sorry, this application can't write to this file.<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The file is located in a directory you are not allowed to write in.<br>- The file is write protected.</html>
-openDialog.fileNotReadable=<html>Sorry, this application can't read this file.<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The owner of this file does not give you the right to read.</html>
-openDialog.cacheNotReadable=<html>Sorry, accessing file <b>{0}</b> is refused to the application. This prevents the reading of data.<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The owner of this file does not give you the right to read.</html>
-MainFrame.LastNotReadable=<html>Unable to read last opened file ({0}).<br><br>Most commons causes are:<br>- The file is opened in another application.<br>- The owner of this file does not give you the right to read.</html>
+saveDialog.fileNotWritable=<html>Desculpa, essa aplicação nao pode escrever no arquivo.<br><br>As causas poderão ser:<br>- O arquivo está aberto em outra aplicação.<br>- O arquivo está localizado em um diretório que voce nao pode abrir.<br>- O arquivo e de "proteção de escrita".</html>
+openDialog.fileNotReadable=<html>Desculpa, essa aplicação nao pode ler esse arquivo.<br><br>As causas poderão ser:<br>- O arquivo está aberto em outra aplicação.<br>- O dono deste arquivo nao lhe dá o direito de fazer a leitura deste.</html>
+openDialog.cacheNotReadable=<html>Desculpa, acessar arquivo <b>{0}</b> e negado a esta aplicação. Poderá prevenir a leitura do arquivo.<br><br>As causas poderão ser:<br>- O arquivo está aberto em outra aplicação.<br>- O dono deste arquivo não lhe dá o direito de ler este.</html>
+MainFrame.LastNotReadable=<html>Incapaz de ler o último arquivo ({0}).<br><br>As causas poderão ser:<br>- O arquivo está aberto em outra aplicação.<br>- O dono deste arquivo não lhe dá o direito de ler este.</html>
 
 #A new field is created to attach a note to an account
 AccountDialog.notes=Notas:
 AccountDialog.notes.tooltip=Você pode inserir notas nesta área (nome de contato, telefone, etc ...)
 
 #A new button in the statement tab to rename the selected statement
-StatementDialog.button.name=ebatizar
+StatementDialog.button.name=Renomear
 StatementDialog.button.tooltip=<html>Renomeia a instrução selecionada..<br>Por favor, nome da nota de declarações que não têm impacto na sua ordem no menu.</html>
 StatementDialog.title=Edite declaração
 StatementDialog.tooltip=Digite a identificação de instrução.
