--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -9,8 +9,9 @@ improvement
 version	0.14.4 (03/24/2013)
 fix
 	The menu "File / Recent Files" was disabled at Yapbam launch when no file was open.
+	Some Portuguese and German translations were wrong.
 improvement
-	In the "Transactions" tab, column "S/T", which can display or hide the sub-transactions, now has a fixed size and is always at left.
+	In the "Transactions" tab, column "S/T", which can display or hide the sub-transactions, now has a fixed size.
 
 version	0.14.3 (02/24/2013)
 improvement
