--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1146,7 +1146,7 @@ com.fathzer.soft.jclop.dropbox.upload=Subir dados do computador para o Dropbox
 com.fathzer.soft.jclop.dropbox.connecting=Conectando ao Dropbox...
 com.fathzer.soft.jclop.dropbox.connectionFailed=Não foi possível conectar ao Dropbox. Parece que você não está conectado a Internet
 com.fathzer.soft.jclop.dropbox.downloading=Baixando do Dropbox ...
-com.fathzer.soft.jclop.dropbox.uploading=Subindo para o Dropbox ...
+com.fathzer.soft.jclop.dropbox.uploading=Baixando para o Dropbox ...
 
 com.fathzer.soft.jclop.dropbox.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
 
