--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1194,3 +1194,5 @@ RecentFiles.tooltip=W\u00e4hlen Sie eine Datei in das Untermen\u00fc zu \u00f6ff
 #-------------------------------------------------------
 # Added or modified since last translation
 
+RecentFiles.unreachable.title=Datei nicht gefunden
+RecentFiles.unreachable.message=<html>Leider Diese Datei ist nicht mehr zugänglich.<br><br>Möchten Sie es von der zuletzt geöffneten Dateien Liste entfernen?</html>
