--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1152,9 +1152,6 @@ com.fathzer.soft.jclop.dropbox.Chooser.refresh.tooltip=Clique neste botão para e
 
 #End of dialog related to Dropbox service
 
-#-------------------------------------------------------
-# Added or modified since last translation
-
 com.fathzer.soft.jclop.GenericWait.title=Por favor, espere ...
 com.fathzer.soft.jclop.Error.title=Um erro ocorreu
 com.fathzer.soft.jclop.Error.unableToSerializeAccount=Desculpa, os dados do login não pode ser salvo. O mesmo será esquecido quando você fechar o Yapbam
@@ -1202,3 +1199,10 @@ PreferencesDialog.Theme.fontSize.tooltip.enabled=Mova o controle deslizante para
 #Adds a menu file in the file menu to display the latest opened files  
 RecentFiles.title=Arquivos recentes
 RecentFiles.tooltip=Selecione um arquivo no sub-menu para abrir
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+RecentFiles.unreachable.title=Arquivo não encontrado
+RecentFiles.unreachable.message=<html>Desculpe este arquivo não está mais acessível.<br><br>Você quer removê-lo da lista de arquivos recentes?</html>
+
