--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1141,10 +1141,6 @@ com.fathzer.soft.jclop.dropbox.uploading=Chargement vers Dropbox ...
 com.fathzer.soft.jclop.dropbox.Chooser.refresh.tooltip=Cliquer sur ce bouton pour mettre à jour la liste des fichiers par rapport au contenu de votre compte Dropbox
 #End of dialog related to Dropbox service
 
-
-#-------------------------------------------------------
-# Added or modified since last translation
-
 com.fathzer.soft.jclop.GenericWait.title=Merci de patienter ...
 com.fathzer.soft.jclop.Error.title=Une erreur est survenue
 com.fathzer.soft.jclop.Error.unableToSerializeAccount=Désolé, impossible de sauvegarder les données de connexion du compte. Celles-ci seront oubliées lorsque vous quitterez Yapbam
@@ -1192,4 +1188,10 @@ PreferencesDialog.Theme.fontSize.tooltip.enabled=Déplacez le curseur pour change
 #Adds a menu file in the file menu to display the latest opened files  
 RecentFiles.title=Fichiers récents
 RecentFiles.tooltip=Choisissez un fichier dans le sous menu pour l'ouvrir
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+RecentFiles.unreachable.title=Fichier introuvable
+RecentFiles.unreachable.message=<html>Désolé, ce fichier n'est plus accessible.<br><br>Voulez-vous le supprimer de la liste des fichiers récents ?</html>
 
