--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1206,3 +1206,4 @@ RecentFiles.tooltip=Selecione um arquivo no sub-menu para abrir
 RecentFiles.unreachable.title=Arquivo não encontrado
 RecentFiles.unreachable.message=<html>Desculpe este arquivo não está mais acessível.<br><br>Você quer removê-lo da lista de arquivos recentes?</html>
 
+MainMenu.CheckUpdate.ProxyAuthError=<HTML>Problemas na comunicação com o server atualizado.<BR>O proxy recusou a conexão.<BR><BR>Por favor, verifique suas configurações de proxy.</HTML>
