--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1196,3 +1196,6 @@ RecentFiles.tooltip=W\u00e4hlen Sie eine Datei in das Untermen\u00fc zu \u00f6ff
 
 RecentFiles.unreachable.title=Datei nicht gefunden
 RecentFiles.unreachable.message=<html>Leider Diese Datei ist nicht mehr zugänglich.<br><br>Möchten Sie es von der zuletzt geöffneten Dateien Liste entfernen?</html>
+
+MainMenu.CheckUpdate.ProxyAuthError=<HTML>Fehler beim Verbinden mit dem Update-Server.<BR>Der Proxy die Verbindung abgelehnt.<BR><BR>Bitte überprüfen Sie Ihre Proxy-Einstellungen.</HTML>
+
