--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1195,3 +1195,5 @@ RecentFiles.tooltip=Choisissez un fichier dans le sous menu pour l'ouvrir
 RecentFiles.unreachable.title=Fichier introuvable
 RecentFiles.unreachable.message=<html>Désolé, ce fichier n'est plus accessible.<br><br>Voulez-vous le supprimer de la liste des fichiers récents ?</html>
 
+MainMenu.CheckUpdate.ProxyAuthError=<HTML>Impossible de se connecter avec le serveur de mise à jour.<BR>Le proxy a refusé la connection.<BR><BR>Merci de vérifier vos réglages de proxy.</HTML>
+
