--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1199,3 +1199,6 @@ RecentFiles.unreachable.message=<html>Leider Diese Datei ist nicht mehr zugängli
 
 MainMenu.CheckUpdate.ProxyAuthError=<HTML>Fehler beim Verbinden mit dem Update-Server.<BR>Der Proxy die Verbindung abgelehnt.<BR><BR>Bitte überprüfen Sie Ihre Proxy-Einstellungen.</HTML>
 
+PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Achtung:</b> Updates sind wichtig!<br><br>Neben dem Hinzufügen neuer Funktionen, können sie auch Probleme beheben.<br>Es wird daher dringend empfohlen, Yapbam uptodate zu halten (wie Java).<br><br>Daher, unabhängig von den obigen Einstellungen, wird die Prüfung immer mindestens einmal pro Monat durchgeführt.</p></html>
+
+ImportantNews.0.14.5=Version 0.15.0 bringt die Möglichkeit, Daten zu einem <b>Dropbox</b>-Konto speichern.<br>So können Sie sich zu erholen und synchronisieren Sie Daten von jedem mit dem Internet verbundenen Computer (einschließlich einem Arbeits-PC, auf dem es nicht möglich ist, um die Dropbox-Software installieren).<br><br>Wir weisen Sie darauf hin, dass <u><b>diese Funktion derzeit im Beta Stadium</b></u>.<br>Achten Sie darauf, eine Kopie Ihrer Daten zu behalten und zögern Sie nicht, um jedes Problem zu support@yapbam.net berichten.
