--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1207,3 +1207,7 @@ RecentFiles.unreachable.title=Arquivo não encontrado
 RecentFiles.unreachable.message=<html>Desculpe este arquivo não está mais acessível.<br><br>Você quer removê-lo da lista de arquivos recentes?</html>
 
 MainMenu.CheckUpdate.ProxyAuthError=<HTML>Problemas na comunicação com o server atualizado.<BR>O proxy recusou a conexão.<BR><BR>Por favor, verifique suas configurações de proxy.</HTML>
+
+PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Aviso:</b> As atualizações são importantes!<br><br>Além de adicionar recursos, eles também podem corrigir problemas.<br>É, portanto, fortemente recomendado manter Yapbam uptodate (como Java).<br><br>Portanto, independentemente das configurações acima, a verificação é realizada sempre pelo menos uma vez por mês.</p></html>
+
+ImportantNews.0.14.5=Versão 0.15.0 apresenta a capacidade de salvar dados em uma conta do <b>Dropbox</b>.<br>Isso permite que você recupere e sincronizar dados a partir de qualquer computador conectado à Internet (incluindo um PC de trabalho em que não é possível instalar o software do Dropbox).<br><br>Chamamos a sua atenção para o fato de que <u><b>este recurso está em beta.</b></u>.<br>Certifique-se de manter uma cópia de seus dados e não hesite em relatar qualquer problema em support@yapbam.net.
