--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -814,7 +814,7 @@ AccountsSummary.FinalBalance=Balanço final
 #-------- New "important news" screen -------
 ImportantNews.title=Notícias Importantes
 ImportantNews.intro=A última atualização do Yapbam teve resultados significante abaixo 
-ImportantNews.0.8.2=O <b>{0}</b> foi movido <b>{1}</b> tab para <b>{2}</b> tab.<br><br> O propósito destas mudanças foi para evitar erros. De fato, na vista <b>{1}</b>, era possível selecionar erradamente, uma transação já selecionada, ou que pertence a outra contra.<br>The <b>{0}</b> está disponível na vista <b>{2}</b> quando <b>{3}</b> o item do menu for selecionado, o que seria impossível de acontecer estes erros.
+ImportantNews.0.8.2=<html>O <b>{0}</b> foi movido <b>{1}</b> tab para <b>{2}</b> tab.<br><br> O propósito destas mudanças foi para evitar erros. De fato, na vista <b>{1}</b>, era possível selecionar erradamente, uma transação já selecionada, ou que pertence a outra contra.<br>The <b>{0}</b> está disponível na vista <b>{2}</b> quando <b>{3}</b> o item do menu for selecionado, o que seria impossível de acontecer estes erros.</html>
 
 #-------- New preference panel about transaction editing -------
 TransactionEditingPreferencesPanel.title=Editando transação
@@ -1210,4 +1210,4 @@ MainMenu.CheckUpdate.ProxyAuthError=<HTML>Problemas na comunicação com o server 
 
 PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Aviso:</b> As atualizações são importantes!<br><br>Além de adicionar recursos, eles também podem corrigir problemas.<br>É, portanto, fortemente recomendado manter Yapbam uptodate (como Java).<br><br>Portanto, independentemente das configurações acima, a verificação é realizada sempre pelo menos uma vez por mês.</p></html>
 
-ImportantNews.0.14.5=Versão 0.15.0 apresenta a capacidade de salvar dados em uma conta do <b>Dropbox</b>.<br>Isso permite que você recupere e sincronizar dados a partir de qualquer computador conectado à Internet (incluindo um PC de trabalho em que não é possível instalar o software do Dropbox).<br><br>Chamamos a sua atenção para o fato de que <u><b>este recurso está em beta.</b></u>.<br>Certifique-se de manter uma cópia de seus dados e não hesite em relatar qualquer problema em support@yapbam.net.
+ImportantNews.0.14.5=<html>Versão 0.15.0 apresenta a capacidade de salvar dados em uma conta do <b>Dropbox</b>.<br>Isso permite que você recupere e sincronizar dados a partir de qualquer computador conectado à Internet (incluindo um PC de trabalho em que não é possível instalar o software do Dropbox).<br><br>Chamamos a sua atenção para o fato de que <u><b>este recurso está em beta.</b></u>.<br>Certifique-se de manter uma cópia de seus dados e não hesite em relatar qualquer problema em support@yapbam.net.</html>
