--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -813,7 +813,7 @@ AccountsSummary.FinalBalance=Finaler Kontostand
 #-------- New "important news" screen -------
 ImportantNews.title=Wichtige Neuigkeiten
 ImportantNews.intro=Das neue Yapbam Update enth\u00e4lt diese wesentlichen \u00c4nderungen
-ImportantNews.0.8.2=<b>{0}</b> wurde verschoben von <b>{1}</b> nach <b>{2}</b>.<br><br> Dies wurde zur Vermeidung von Pr\u00fcffehlern getan. In der Ansicht <b>{1}</b> war es m\u00f6glich, eine bereits gepr\u00fcfte Zahlung oder die eines anderen Kontos zu pr\u00fcfen.<br><b>{0}</b> finden Sie nun in der Ansicht <b>{2}</b>, wenn das Men\u00fc <b>{3}</b> ausgew\u00e4hlt ist, k\u00f6nnen solche Fehler nicht mehr auftreten.
+ImportantNews.0.8.2=<html><b>{0}</b> wurde verschoben von <b>{1}</b> nach <b>{2}</b>.<br><br> Dies wurde zur Vermeidung von Pr\u00fcffehlern getan. In der Ansicht <b>{1}</b> war es m\u00f6glich, eine bereits gepr\u00fcfte Zahlung oder die eines anderen Kontos zu pr\u00fcfen.<br><b>{0}</b> finden Sie nun in der Ansicht <b>{2}</b>, wenn das Men\u00fc <b>{3}</b> ausgew\u00e4hlt ist, k\u00f6nnen solche Fehler nicht mehr auftreten.</html>
 
 #-------- New preference panel about transaction editing -------
 TransactionEditingPreferencesPanel.title=Bearbeitung eines Vorgangs
@@ -1201,4 +1201,4 @@ MainMenu.CheckUpdate.ProxyAuthError=<HTML>Fehler beim Verbinden mit dem Update-S
 
 PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Achtung:</b> Updates sind wichtig!<br><br>Neben dem Hinzufügen neuer Funktionen, können sie auch Probleme beheben.<br>Es wird daher dringend empfohlen, Yapbam uptodate zu halten (wie Java).<br><br>Daher, unabhängig von den obigen Einstellungen, wird die Prüfung immer mindestens einmal pro Monat durchgeführt.</p></html>
 
-ImportantNews.0.14.5=Version 0.15.0 bringt die Möglichkeit, Daten zu einem <b>Dropbox</b>-Konto speichern.<br>So können Sie sich zu erholen und synchronisieren Sie Daten von jedem mit dem Internet verbundenen Computer (einschließlich einem Arbeits-PC, auf dem es nicht möglich ist, um die Dropbox-Software installieren).<br><br>Wir weisen Sie darauf hin, dass <u><b>diese Funktion derzeit im Beta Stadium</b></u>.<br>Achten Sie darauf, eine Kopie Ihrer Daten zu behalten und zögern Sie nicht, um jedes Problem zu support@yapbam.net berichten.
+ImportantNews.0.14.5=<html>Version 0.15.0 bringt die Möglichkeit, Daten zu einem <b>Dropbox</b>-Konto speichern.<br>So können Sie sich zu erholen und synchronisieren Sie Daten von jedem mit dem Internet verbundenen Computer (einschließlich einem Arbeits-PC, auf dem es nicht möglich ist, um die Dropbox-Software installieren).<br><br>Wir weisen Sie darauf hin, dass <u><b>diese Funktion derzeit im Beta Stadium</b></u>.<br>Achten Sie darauf, eine Kopie Ihrer Daten zu behalten und zögern Sie nicht, um jedes Problem zu support@yapbam.net berichten.</html>
