--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1192,11 +1192,19 @@ RecentFiles.tooltip=Choisissez un fichier dans le sous menu pour l'ouvrir
 #-------------------------------------------------------
 # Added or modified since last translation
 
+#Alert dialog displayed when a deleted file is selected
 RecentFiles.unreachable.title=Fichier introuvable
 RecentFiles.unreachable.message=<html>Désolé, ce fichier n'est plus accessible.<br><br>Voulez-vous le supprimer de la liste des fichiers récents ?</html>
 
+#A detailed error when proxy setting is wrong while looking for updates 
 MainMenu.CheckUpdate.ProxyAuthError=<HTML>Impossible de se connecter avec le serveur de mise à jour.<BR>Le proxy a refusé la connection.<BR><BR>Merci de vérifier vos réglages de proxy.</HTML>
 
+#A message displayed when an update is available and the version is ... old
 PreferencesDialog.AutoUpdate.forcedCheck.message=<html><p><b>Attention :</b> Les mises à jour sont importantes !<br><br>En dehors d'ajouter des fonctionnalités, elles peuvent aussi corriger des problèmes.<br>Il est donc vivement recommandé de maintenir Yapbam à jour (de même que Java).<br><br>C'est pourquoi, quelques soient les réglages ci-dessus, la vérification est systématiquement effectuée au moins une fois par mois.</p></html>
 
+#A message, displayed once at startup, that introduces Dropbox synchronization
 ImportantNews.0.14.5=<html>La version 0.15.0 introduit la possibilité de sauvegarder les données dans le service Cloud <b>Dropbox</b>.<br>Ceci permet de retrouver et synchroniser vos données depuis n''importe quel ordinateur relié à Internet (y compris un PC de travail sur lequel il n''est pas possible d''installer le client Dropbox).<br><br>Nous attirons votre attention sur le fait que <b><u>cette fonctionnalité est actuellement en béta</u></b>.<br>Veillez donc à conserver une copie de vos données et n''hésitez pas à nous signaler tout problème à l''adresse support@yapbam.net.</html>
+
+#A new button to ignore end date in the "balance history" panel
+BalanceHistory.ignoreEnd=Ignore end date
+BalanceHistory.ignoreEnd.toolTip=Check this box to ignore the end date defined by the filter
